--- a/src/components/checkoutCart/components/styles/styles.css
+++ b/src/components/checkoutCart/components/styles/styles.css
@@ -1,4 +1,13 @@
 .section__cartItem{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, minmax(0, auto));
+}
+
+.section__cartItem--infoProducts{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(2, minmax(0, 60px));
   img{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
