--- a/src/components/checkoutCart/components/styles/styles.css
+++ b/src/components/checkoutCart/components/styles/styles.css
@@ -7,7 +7,7 @@
 .section__cartItem--infoProducts{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(2, minmax(0, 60px));
+  grid-template-rows: repeat(2, minmax(0, auto));
   img{
     grid-column: 1 / 2;
     grid-row: 1 / 3;
